--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,14 @@
     <title>Document</title>
 </head>
 
+<!-- 2. Реализовать Vue компонент «текстовая карусель» 
+для анекдотов или крылатых выражений. Данный 
+компонент может получать в качестве свойств массив 
+строк (каждая строка отдельный слайд для карусели) и 
+задержку в секундах между сменой слайдов. Смену 
+текстовых слайдов реализовать с какой-нибудь 
+анимацией. -->
+
 <div id="app">
     <header>
         <div class="container">
